@@ -63,18 +63,18 @@ the public CVS archive instead (see below for details).</dd>
 <td class="download">27 Mar 2006</td></tr>
 <tr><td class="download">
 <a href="ftp://ftp.octave.org/pub/octave">Testing</a> (you probably want this)</td>
-<td class="download">2.9.16
-    (<a href="ftp://ftp.octave.org/pub/octave/octave-2.9.16.tar.gz">.tar.gz</a>)
-    (<a href="ftp://ftp.octave.org/pub/octave/octave-2.9.16.tar.bz2">.tar.bz2</a>)
+<td class="download">2.9.17
+    (<a href="ftp://ftp.octave.org/pub/octave/octave-2.9.17.tar.gz">.tar.gz</a>)
+    (<a href="ftp://ftp.octave.org/pub/octave/octave-2.9.17.tar.bz2">.tar.bz2</a>)
 </td>
-<td class="download">31 Oct 2007</td></tr>
+<td class="download">10 Nov 2007</td></tr>
 <tr><td class="download">
 <a href="ftp://ftp.octave.org/pub/octave/bleeding-edge">Development</a>  (latest features, expect a few rough spots)</td>
-<td class="download">2.9.16
-    (<a href="ftp://ftp.octave.org/pub/octave/bleeding-edge/octave-2.9.16.tar.gz">.tar.gz</a>)
-    (<a href="ftp://ftp.octave.org/pub/octave/bleeding-edge/octave-2.9.16.tar.bz2">.tar.bz2</a>)
+<td class="download">2.9.17
+    (<a href="ftp://ftp.octave.org/pub/octave/bleeding-edge/octave-2.9.17.tar.gz">.tar.gz</a>)
+    (<a href="ftp://ftp.octave.org/pub/octave/bleeding-edge/octave-2.9.17.tar.bz2">.tar.bz2</a>)
 </td>
-<td class="download">31 Oct 2007</td></tr>
+<td class="download">10 Nov 2007</td></tr>
 <caption>Download links for Octave</caption>
 </table>
 </div>
