@@ -22,7 +22,7 @@ interested in up-to-the-minute changes, you may use the sources from
 the public CVS archive instead (see below for details).</dd>
 </dl>
 
-__DOWNLOAD_INFO__(`2.1.73', `27 Mar 2006', `2.9.16', `31 Oct 2007', `2.9.16', `31 Oct 2007')
+__DOWNLOAD_INFO__(`2.1.73', `27 Mar 2006', `2.9.17', `10 Nov 2007', `2.9.17', `10 Nov 2007')
 </div>
 
 <blockquote class="note">
